backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend # Sets Deployment Name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 3a7jouokyffroregistry.azurecr.io/amariar/backend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8000 # Exposes container port
      imagePullSecrets:
        - name: docker-pull-secret
