backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend # Sets service name
  labels:
    app: backend #Labels and Selectors
spec:
  type: ClusterIP #Sets service type
  ports:
    - port: 8000 #Sets port to run the backend application
  selector:
    app: backend
